--- a/src/components/global.css
+++ b/src/components/global.css
@@ -19,15 +19,15 @@
 */
 
 :host {
-  --el-background-color: rgb(0, 0, 0);
-  --el-foreground-color: rgb(255, 255, 255);
-  --el-border-color: rgb(42, 42, 42);
+  --el-background-color: 0, 0, 0;
+  --el-foreground-color: 255, 255, 255;
+  --el-border-color: 42, 42, 42;
   --el-border-radius: 0.5rem;
   --el-timing-function: ease-in-out;
   --el-font-family: 'Inter', sans-serif;
   --el-font-size: 16px;
   --el-line-height: 1;
-  --el-accent-color: rgb(255, 255, 255);
+  --el-accent-color: 255, 255, 255;
   --el-border-width: 1px;
   --el-font-weight: 300;
 }
